--- a/package.json
+++ b/package.json
@@ -109,6 +109,7 @@
     }
   },
   "dependencies": {
+    "dayjs": "^1.11.7",
     "electron-debug": "^3.2.0",
     "electron-log": "^4.4.8",
     "electron-updater": "^5.2.3",
