--- a/package.json
+++ b/package.json
@@ -109,6 +109,9 @@
     }
   },
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/material": "^5.11.4",
     "dayjs": "^1.11.7",
     "electron-debug": "^3.2.0",
     "electron-log": "^4.4.8",
