--- a/package.json
+++ b/package.json
@@ -111,6 +111,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.4",
     "dayjs": "^1.11.7",
     "electron-debug": "^3.2.0",
