--- a/package.json
+++ b/package.json
@@ -113,6 +113,7 @@
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.4",
+    "@reduxjs/toolkit": "^1.9.1",
     "dayjs": "^1.11.7",
     "electron-debug": "^3.2.0",
     "electron-log": "^4.4.8",
@@ -121,6 +122,7 @@
     "jspdf-autotable": "^3.5.28",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.0",
     "react-toastify": "^9.1.1",
     "uuid": "^9.0.0",
