--- a/package.json
+++ b/package.json
@@ -122,9 +122,11 @@
     "jspdf-autotable": "^3.5.28",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.0",
     "react-toastify": "^9.1.1",
+    "styled-components": "^5.3.6",
     "uuid": "^9.0.0",
     "xlsx": "^0.18.5"
   },
@@ -141,6 +143,7 @@
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@types/react-test-renderer": "^18.0.0",
+    "@types/styled-components": "^5.1.26",
     "@types/terser-webpack-plugin": "^5.0.4",
     "@types/webpack-bundle-analyzer": "^4.4.2",
     "@typescript-eslint/eslint-plugin": "^5.33.1",
